wip: add Failured HTTP status code in docs
