# docs/swagger.json
@@ -55,6 +55,12 @@
                                 "$ref": "#/definitions/queries.Device"
                             }
                         }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 }
             },
@@ -78,7 +84,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handler.DeviceResponse"
+                            "$ref": "#/definitions/queries.Device"
                         }
                     }
                 ],
@@ -87,6 +93,18 @@
                         "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/queries.Device"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
@@ -121,6 +139,18 @@
                         "schema": {
                             "$ref": "#/definitions/queries.Device"
                         }
+                    },
+                    "404": {
+                        "description": "Device not found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Device not found",
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 }
             },
@@ -149,6 +179,12 @@
                 "responses": {
                     "204": {
                         "description": "No Content"
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 }
             },
@@ -189,32 +225,24 @@
                         "schema": {
                             "$ref": "#/definitions/queries.Device"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 }
             }
         }
     },
     "definitions": {
-        "handler.DeviceResponse": {
-            "type": "object",
-            "properties": {
-                "brand": {
-                    "type": "string"
-                },
-                "creation_time": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "state": {
-                    "type": "string"
-                }
-            }
-        },
         "queries.Device": {
             "type": "object",
             "properties": {
